fixed the topbar and gap problem

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -58,11 +58,11 @@
 
 @media (max-width: 575px) {
     .section_header p {
-        font-size: 16px;
+        font-size: 15px;
     }
 
     .section_header h2 {
-        font-size: 24px;
+        font-size: 22px;
     }
 
     .section_header {
