--- a/css/style.css
+++ b/css/style.css
@@ -43,44 +43,17 @@ a {
 
 #course-show-slider {
     position: relative;
-    padding: 0 36px;
+    padding: 0 16px;
 }
-
-#course-show-slider .owl-nav {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 100%;
-    transform: translateY(-50%);
-}
-
-#course-show-slider .owl-nav button {
-    width: 36px;
-    height: 36px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    color: #fff;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-#course-show-slider .owl-nav button.owl-prev {
-    left: 0;
-
-}
-
-#course-show-slider .owl-nav button.owl-next {
-    right: 0;
+#course-show-slider .row{
+    flex-wrap: nowrap; 
 }
 
 #course-show-slider a {
-    padding: 10px 0;
-    display: block;
-    text-align: center;
+    padding: 10px 8px;
+    white-space: nowrap;
     font-size: 14px;
+    margin: 0 8px;
 }
 
 #course-show-slider .owl-nav button.disabled {
@@ -107,8 +80,9 @@ a {
     color: #f07822;
     display: inline-block;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 400;
     line-height: normal;
+    text-transform: capitalize;
 }
 
 .section_header h2 {
@@ -128,8 +102,7 @@ a {
     padding: 24px;
     text-align: center;
     transition: all .2s ease-out;
-    box-shadow: 0 0px 6px 0px rgba(98, 51, 143, 0.15),
-        0 1px 3px 0px rgba(98, 51, 143, 0.1);
+    box-shadow:0 1px 3px 0px rgba(98, 51, 143, 0.1);
 }
 
 .course-box .icon-box {
@@ -189,8 +162,14 @@ a {
 }
 
 .career-card {
-    box-shadow: 0 3px 2px #62338f59;
+    /* box-shadow: 0 3px 2px #62338f59; */
+    transition: all .3s ease;
+    box-shadow: 0px 35px 30px 0px rgba(98, 51, 143, 0.06);
 }
+.career-card:hover{
+    transition: all .3s ease;
+    box-shadow: 0px 5px 17px 0px rgba(98, 51, 143, 0.15);
+} 
 
 .career-card-title p {
     font-size: 15px;
@@ -482,24 +461,28 @@ a {
 .footer-links ul li {
     list-style: none;
 }
-.footer-links ul li +li{
+
+.footer-links ul li+li {
     margin-top: 8px;
 }
-.footer-links>ul>li>a{
+
+.footer-links>ul>li>a {
     font-size: 15px;
     color: #fff;
     font-weight: 300;
     display: block;
     transition: all .3s ease;
 }
-.footer-links>ul>li>a:hover{
-    color:#f07822;
+
+.footer-links>ul>li>a:hover {
+    color: #f07822;
     transition: all .3s ease;
 }
-.footer-icons>a{
+
+.footer-icons>a {
     font-size: 20px;
     background-color: #fff;
-    border:1px solid #fff;
+    border: 1px solid #fff;
     color: #d65c05;
     width: 35px;
     height: 35px;
@@ -510,29 +493,72 @@ a {
     font-size: 15px;
     transition: all .3s ease;
 }
-.footer-icons>a:hover{
+
+.footer-icons>a:hover {
     color: #fff;
     background-color: transparent;
     transition: all .3s ease;
 
 }
-.footer-icons{
+
+.footer-icons {
     display: flex;
     flex-direction: row;
     padding-top: 8px;
 }
-.footer-icons a+a{
+
+.footer-icons a+a {
     margin-left: 10px;
 }
-.copy-right-version{
+
+.copy-right-version {
     font-size: 15px;
     font-weight: 400;
     color: #fff;
     text-align: center;
     padding: 8px 0;
 }
-.top-courses .course-box{
-    background-color:rgb(187 187 187 / 7%);
-    box-shadow: 0 2px 6px rgba(187, 187, 187, 0.15),
-                0 1px 3px rgba(187, 187, 187, 0.12);
+
+.top-courses {
+    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(241, 246, 253, 1) 100%);
 }
+
+.top-courses .course-box {
+    background-color: #fff;
+    box-shadow: 0 2px 2px rgba(187, 187, 187, 0.15),
+        0 1px 3px rgba(187, 187, 187, 0.12);
+}
+
+
+#course-show-slider .simplebar-content{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#course-show-slider  .simplebar-track.simplebar-horizontal{
+    background-color: transparent;  
+    height: 7px;
+}
+#course-show-slider  .simplebar-track.simplebar-horizontal .simplebar-scrollbar{
+    height: 4px;
+}
+#course-show-slider  .simplebar-track.simplebar-horizontal .simplebar-scrollbar:before{
+    background-color:#adb5bd;
+    cursor: pointer;
+}
+/* #course-show-slider  .simplebar-track.simplebar-horizontal .simplebar-scrollbar{
+    width: 7px;
+    cursor: pointer;
+    min-height: 75px;
+}
+#course-show-slider  .simplebar-track.simplebar-vertical .simplebar-scrollbar:before{
+    top:2px;
+    width: 4px;
+    cursor: pointer;
+    left:2px;
+    right:2px;
+    bottom:2px;
+    border-radius: 10px;
+    background-color: #adb5bd;
+} */
